# weater-forecast-skills

./: .gitignore  README.md  SKILL.md  pyproject.toml
references/: NWS_API.md
scripts/: geocode.py  get_forecast.py
